Github/firewall.tf
resource "aws_security_group" "firewall" {
  name = "sg_fwl"
  vpc_id = aws_vpc.vpc1.id
  description = "permitir port 80"

    ingress{
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress{
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "firewall"
    }
}
